Swiss Re: Review fixes